Add Class CurrentDateTime